# Bio_Vault

./: .gitignore  HomePage.html  HomePage.js  README.md  camera.html  camera.js  devenv.nix  flake.nix  generate-jwt-key.py  manifest.json  popup.html  popup.js  pyproject.toml
app/: database.py  dependencies.py  encoding.py  main.py  security.py
app/routers/: account.py  credentials.py
extension/chromium/: biometric.html  biometric.js  console.html  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js  service-worker.js  theme.css
extension/chromium/lib/: api.js  crypto.js  storage.js
