[project]
name = "bio_vault"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncmy==0.2.11",
    "cryptography==46.0.3",
    "fastapi==0.128.0",
    "jwcrypto==1.5.6",
    "pydantic==2.12.5",
    "python-multipart==0.0.21",
    "sqlalchemy==2.0.46",
    "sqlmodel==0.0.32",
    "uvicorn==0.40.0"
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==9.0.2",
]
